--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
           <div>
             <img src="./img/icones/rastreador.svg" alt="">
-            <h3 class="font-1-m cor-0">rastreador</h3>
+            <h3 class="font-1-m cor-0">Rastreador</h3>
             <p class="font-2-s cor-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos restreadores e sistemas anti-furto para garantir o seu sossego.</p>
           </div>
         </div>
@@ -100,6 +100,21 @@
       </div>
     </div>
   </article>
+
+  <section class="parceiros" aria-label="Nossos Parceiros">
+    <h2 class="container texto-grande">nossos parceiros<span class="cor-p1">.</span></h2>
+
+    <ul>
+      <li><img src="./img/parceiros/caravan.svg" alt="caravan"></li>
+      <li><img src="./img/parceiros/ranek.svg" alt="caravan"></li>
+      <li><img src="./img/parceiros/handel.svg" alt="caravan"></li>
+      <li><img src="./img/parceiros/dogs.svg" alt="caravan"></li>
+      <li><img src="./img/parceiros/lescone.svg" alt="caravan"></li>
+      <li><img src="./img/parceiros/flexblog.svg" alt="caravan"></li>
+      <li><img src="./img/parceiros/wildbeast.svg" alt="caravan"></li>
+      <li><img src="./img/parceiros/surfbot.svg" alt="caravan"></li>
+    </ul>
+  </section>
 
 </body>
 
