--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 
     <ul>
       <li><img src="./img/parceiros/caravan.svg" alt="caravan"></li>
-      <li><img src="./img/parceiros/ranek.svg" alt="caravan"></li>
-      <li><img src="./img/parceiros/handel.svg" alt="caravan"></li>
-      <li><img src="./img/parceiros/dogs.svg" alt="caravan"></li>
-      <li><img src="./img/parceiros/lescone.svg" alt="caravan"></li>
-      <li><img src="./img/parceiros/flexblog.svg" alt="caravan"></li>
-      <li><img src="./img/parceiros/wildbeast.svg" alt="caravan"></li>
-      <li><img src="./img/parceiros/surfbot.svg" alt="caravan"></li>
+      <li><img src="./img/parceiros/ranek.svg" alt="renek"></li>
+      <li><img src="./img/parceiros/handel.svg" alt="handel"></li>
+      <li><img src="./img/parceiros/dogs.svg" alt="dogs"></li>
+      <li><img src="./img/parceiros/lescone.svg" alt="lescone"></li>
+      <li><img src="./img/parceiros/flexblog.svg" alt="flexblog"></li>
+      <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+      <li><img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
     </ul>
   </section>
 
