--- a/seguros.html
+++ b/seguros.html
@@ -97,7 +97,7 @@
           <img src="./img/icones/seguro.svg" alt="">
           <h3 class="font-1-l cor-0">Segurança</h3>
           <p class="font-2-s cor-5">Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro não será perdido em caso de roubo.</p>
-        </li>        
+        </li>
         <li>
           <img src="./img/icones/velocidade.svg" alt="">
           <h3 class="font-1-l cor-0">Rapidez</h3>
@@ -105,6 +105,44 @@
         </li>
       </ul>
     </div>
+  </article>
+
+  <article class="perguntas container">
+    <h2 class="texto-grande">perguntas frequentes<span class="cor-p1">.</span></h2>
+
+    <dl>
+      <div>
+        <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+        <dd class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
+        </dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Como posso entrar me contato?</dt>
+        <dd class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
+        </dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
+        <dd class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
+        </dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
+        <dd class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
+        </dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
+        <dd class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
+        </dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Quantas trocas posso fazer pro ano?</dt>
+        <dd class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
+        </dd>
+      </div>
+    </dl>
+
   </article>
 
   <footer class="footer-bg">
