--- a/termos.html
+++ b/termos.html
@@ -36,7 +36,7 @@
     <div class="titulo-bg">
       <div class="titulo container">
         <p class="font-2-l-b cor-5">Termos de uso</p>
-        <h1 class="fonte-grande cor-0">termos e condições<span class="cor-p1">.</span></h1>
+        <h1 class="texto-grande cor-0">termos e condições<span class="cor-p1">.</span></h1>
       </div>
     </div>
 
