--- a/contato.html
+++ b/contato.html
@@ -51,7 +51,6 @@
         <address class="contato-meios cont-2-s cor-4">
           <a href="mailto:contato@bikcraft.com">Contato@bikcraft.com</a>
           <a href="mailto:assistencia@bikcraft.com">assistencia@bikcraft.com</a>
-          <a href="mailto:contato@bikcraft.com">Contato@bikcraft.com</a>
           <a href="tel:+555199999999">+55 51 9999-9999</a>
         </address>
         <div class="contato-redes">
@@ -76,15 +75,15 @@
             <label for="nome">Telefone</label>
             <input type="text" id="telefone" name="telefone" placeholder="(21) 9999-9999">
           </div>
-          <div>
+          <div class="col-2">
             <label for="nome">Email</label>
             <input type="email" id="email" name="email" placeholder="contato@email.com">
           </div>
-          <div>
+          <div class="col-2">
             <label for="mensagem">Mensagem</label>
             <textarea rows="5" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
           </div>
-          <button class="botao">Enviar Mensagem</button>
+          <button class="botao col-2">Enviar Mensagem</button>
         </form>
       </section>
     </div>
