--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <p class="texto-medio cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="botao" href="./bicicletas.html">Escolha a sua</a>
       </div>
-      <picture>   <!-- Responsividade abaixo de 800px carrega outra imagem menor -->
-        <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg"> 
+      <picture>
+        <!-- Responsividade abaixo de 800px carrega outra imagem menor -->
+        <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
         <img src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta.">
       </picture>
     </div>
@@ -198,6 +199,8 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
