--- a/seguros.html
+++ b/seguros.html
@@ -8,12 +8,14 @@
   <meta name="description" content="Termos e condições.">
   <title>Seguros | Bikcraft</title>
 
+  <link rel="icon" href="./img/favicon-bik.svg" type="image/svg+xml">
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="seguros">
@@ -43,7 +45,7 @@
 
 
     <div class="seguros container">
-      <div class="seguros-item">
+      <div class="seguros-item fadeInDown" data-anime="200">
         <h3 class="font-1-xl cor-6">PRATA</h3>
         <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
         <ul class="font-2-m cor-0">
@@ -54,7 +56,7 @@
         </ul>
         <a class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
       </div>
-      <div class="seguros-item">
+      <div class="seguros-item fadeInDown" data-anime="400">
         <h3 class="font-1-xl cor-p1">OURO</h3>
         <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
         <ul class="font-2-m cor-0">
@@ -70,120 +72,121 @@
     </div>
   </main>
 
-  <article class="vantagens-bg">
-    <div class="vantagens container">
-      <h2 class="texto-grande cor-0">você seguro<span class="cor-p1">.</span></h2>
-      <ul>
-        <li>
-          <img src="./img/icones/eletrica.svg" width="24" height="24" alt="">
-          <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
-          <p class="font-2-s cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
-        </li>
-        <li>
-          <img src="./img/icones/carbono.svg" width="24" height="24" alt="">
-          <h3 class="font-1-l cor-0">Carbono</h3>
-          <p class="font-2-s cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
-        </li>
-        <li>
-          <img src="./img/icones/sustentavel.svg" width="24" height="24" alt="">
-          <h3 class="font-1-l cor-0">Sustentável</h3>
-          <p class="font-2-s cor-5">Trabalhamos com a filosofia de desperdicio zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
-        </li>
-        <li>
-          <img src="./img/icones/rastreador.svg" width="24" height="24" alt="">
-          <h3 class="font-1-l cor-0">Rastreador</h3>
-          <p class="font-2-s cor-5">Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança para efetuarmos a recuperação.</p>
-        </li>
-        <li>
-          <img src="./img/icones/seguro.svg" width="24" height="24" alt="">
-          <h3 class="font-1-l cor-0">Segurança</h3>
-          <p class="font-2-s cor-5">Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro não será perdido em caso de roubo.</p>
-        </li>
-        <li>
-          <img src="./img/icones/velocidade.svg" width="24" height="24" alt="">
-          <h3 class="font-1-l cor-0">Rapidez</h3>
-          <p class="font-2-s cor-5">A sua Bikcraft ficará para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
-        </li>
-      </ul>
-    </div>
-  </article>
+  <article class=" vantagens-bg">
+          <div class="vantagens container">
+            <h2 class="texto-grande cor-0">você seguro<span class="cor-p1">.</span></h2>
+            <ul>
+              <li>
+                <img src="./img/icones/eletrica.svg" width="24" height="24" alt="">
+                <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
+                <p class="font-2-s cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
+              </li>
+              <li>
+                <img src="./img/icones/carbono.svg" width="24" height="24" alt="">
+                <h3 class="font-1-l cor-0">Carbono</h3>
+                <p class="font-2-s cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
+              </li>
+              <li>
+                <img src="./img/icones/sustentavel.svg" width="24" height="24" alt="">
+                <h3 class="font-1-l cor-0">Sustentável</h3>
+                <p class="font-2-s cor-5">Trabalhamos com a filosofia de desperdicio zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
+              </li>
+              <li>
+                <img src="./img/icones/rastreador.svg" width="24" height="24" alt="">
+                <h3 class="font-1-l cor-0">Rastreador</h3>
+                <p class="font-2-s cor-5">Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança para efetuarmos a recuperação.</p>
+              </li>
+              <li>
+                <img src="./img/icones/seguro.svg" width="24" height="24" alt="">
+                <h3 class="font-1-l cor-0">Segurança</h3>
+                <p class="font-2-s cor-5">Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro não será perdido em caso de roubo.</p>
+              </li>
+              <li>
+                <img src="./img/icones/velocidade.svg" width="24" height="24" alt="">
+                <h3 class="font-1-l cor-0">Rapidez</h3>
+                <p class="font-2-s cor-5">A sua Bikcraft ficará para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+              </li>
+            </ul>
+          </div>
+          </article>
 
-  <article class="perguntas container">
-    <h2 class="texto-grande">perguntas frequentes<span class="cor-p1">.</span></h2>
+          <article class="perguntas container">
+            <h2 class="texto-grande">perguntas frequentes<span class="cor-p1">.</span></h2>
 
-    <dl>
-      <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta1" aria-expanded="true">Qual forma de pagamento vocês aceitam?</button></dt>
-        <dd id="pergunta1" class="font-2-s cor-9 ativa">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
-        </dd>
-      </div>
-      <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta2" aria-expanded="false">Como posso entrar me contato?</button></dt>
-        <dd id="pergunta2" class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
-        </dd>
-      </div>
-      <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta3" aria-expanded="false">Vocês possuem algum desconto?</button></dt>
-        <dd id="pergunta3" class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
-        </dd>
-      </div>
-      <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta4" aria-expanded="false">Qual a garantia que possuo?</button></dt>
-        <dd id="pergunta4" class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
-        </dd>
-      </div>
-      <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta5" aria-expanded="false">Posso parcelar no boleto?</button></dt>
-        <dd id="pergunta5" class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
-        </dd>
-      </div>
-      <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta6" aria-expanded="false">Quantas trocas posso fazer pro ano?</button></dt>
-        <dd id="pergunta6" class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
-        </dd>
-      </div>
-    </dl>
+            <dl>
+              <div>
+                <dt><button class="font-1-m-b" aria-controls="pergunta1" aria-expanded="true">Qual forma de pagamento vocês aceitam?</button></dt>
+                <dd id="pergunta1" class="font-2-s cor-9 ativa">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
+                </dd>
+              </div>
+              <div>
+                <dt><button class="font-1-m-b" aria-controls="pergunta2" aria-expanded="false">Como posso entrar me contato?</button></dt>
+                <dd id="pergunta2" class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
+                </dd>
+              </div>
+              <div>
+                <dt><button class="font-1-m-b" aria-controls="pergunta3" aria-expanded="false">Vocês possuem algum desconto?</button></dt>
+                <dd id="pergunta3" class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
+                </dd>
+              </div>
+              <div>
+                <dt><button class="font-1-m-b" aria-controls="pergunta4" aria-expanded="false">Qual a garantia que possuo?</button></dt>
+                <dd id="pergunta4" class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
+                </dd>
+              </div>
+              <div>
+                <dt><button class="font-1-m-b" aria-controls="pergunta5" aria-expanded="false">Posso parcelar no boleto?</button></dt>
+                <dd id="pergunta5" class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
+                </dd>
+              </div>
+              <div>
+                <dt><button class="font-1-m-b" aria-controls="pergunta6" aria-expanded="false">Quantas trocas posso fazer pro ano?</button></dt>
+                <dd id="pergunta6" class="font-2-s cor-9">Aceitamos pagamento parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através da PagSeguro.
+                </dd>
+              </div>
+            </dl>
 
-  </article>
+          </article>
 
-  <footer class="footer-bg">
-    <div class="footer container">
-      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
-      <div class="footer-contato">
-        <h3 class="font-2-1-b cor-0">Contato</h3>
-        <ul class="font-2-m cor-5">
-          <li><a href="tel:+555199999999">+55 51 9999-9999</a></li>
-          <li><a href="mailto:Contato@bikcraft.com">Contato@bikcraft.com</a></li>
-          <li>Rua Ali perto, 42 - Botafogo</li>
-          <li>Rio de Janeiro - RJ</li>
-        </ul>
-        <div class="footer-redes">
-          <a href="./">
-            <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram">
-          </a>
-          <a href="./">
-            <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook">
-          </a>
-          <a href="./">
-            <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube">
-          </a>
-        </div>
-      </div>
-      <div class="footer-informacoes">
-        <h3 class="font-2-1-b cor-0">Informaçoes</h3>
-        <nav>
-          <ul class="font-1-m cor-5">
-            <li><a href="./bicicletas.html">Bicicletas</a></li>
-            <li><a href="./seguros.html">Seguros</a></li>
-            <li><a href="./contato.html">Contato</a></li>
-            <li><a href="./termos.html">Termos e condições</a></li>
-          </ul>
-        </nav>
-      </div>
-      <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
-    </div>
-  </footer>
-  <script src="./js/script.js"></script>
+          <footer class="footer-bg">
+            <div class="footer container">
+              <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
+              <div class="footer-contato">
+                <h3 class="font-2-1-b cor-0">Contato</h3>
+                <ul class="font-2-m cor-5">
+                  <li><a href="tel:+555199999999">+55 51 9999-9999</a></li>
+                  <li><a href="mailto:Contato@bikcraft.com">Contato@bikcraft.com</a></li>
+                  <li>Rua Ali perto, 42 - Botafogo</li>
+                  <li>Rio de Janeiro - RJ</li>
+                </ul>
+                <div class="footer-redes">
+                  <a href="./">
+                    <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram">
+                  </a>
+                  <a href="./">
+                    <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook">
+                  </a>
+                  <a href="./">
+                    <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube">
+                  </a>
+                </div>
+              </div>
+              <div class="footer-informacoes">
+                <h3 class="font-2-1-b cor-0">Informaçoes</h3>
+                <nav>
+                  <ul class="font-1-m cor-5">
+                    <li><a href="./bicicletas.html">Bicicletas</a></li>
+                    <li><a href="./seguros.html">Seguros</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
+                    <li><a href="./termos.html">Termos e condições</a></li>
+                  </ul>
+                </nav>
+              </div>
+              <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
+            </div>
+          </footer>
+          <script src="./js/plugins/simple-anime.js"></script>
+          <script src="./js/script.js"></script>
 </body>
 
 </html>
